# ShowMeThePER

./: .gitignore  README.md  pyproject.toml
docs/: data-strategy.md  getting-started.md  requirements.md  smoke-run.md
src/show_me_the_per/: __init__.py  cli.py  company_master.py  financials.py  growth.py  krx.py  matching.py  models.py  naver_finance.py  opendart.py  pipeline.py  rankings.py  reports.py  storage.py  web.py
tests/: test_cli.py  test_company_master.py  test_financials.py  test_growth.py  test_krx.py  test_matching.py  test_naver_finance.py  test_opendart.py  test_pipeline.py  test_rankings.py  test_reports.py  test_storage.py  test_web.py
tests/fixtures/: naver_finance_main_005930.html
