[project]
name = "show-me-the-per"
version = "0.1.0"
description = "Collect and analyze Korean listed company financial data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
show-me-the-per = "show_me_the_per.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
